syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/SemenTretyakov/auth_service/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateReq) returns (CreateRes);
  rpc Get(GetReq) returns (GetRes);
  rpc Update(UpdateReq) returns (google.protobuf.Empty);
  rpc Delete(DeleteReq) returns (google.protobuf.Empty);
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message UserFields {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateReq {
  UserFields info = 1;
}

message CreateRes {
  int64 id = 1;
}

message GetReq {
  int64 id = 1;
}

message GetRes {
  User user = 1;
}

message UpdateUserInfo {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
}

message UpdateReq {
  int64 id = 1;
  UpdateUserInfo info = 2;
}

message DeleteReq {
  int64 id = 1;
}





